--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: virtual_pet
+name: petmo
 description: DECO3500 - ChickenCrimpies design prototype.
 
 # The following line prevents the package from being accidentally published to
