--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,12 @@ dependencies:
   # Display TODOs in grid
   flutter_staggered_grid_view: ^0.4.0-nullsafety.3
 
+  # Slide button
+  slide_button: ^0.2.8
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_guid: ^0.2.0
 
 dev_dependencies:
   flutter_test:
