--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Format dateTime
   intl: ^0.17.0
 
+  http: any
+
   # Display TODOs in grid
   flutter_staggered_grid_view: ^0.4.0
 
@@ -51,12 +53,14 @@ dependencies:
 
   # Firebase
   firebase_core: ^1.7.0
-
-  firebase_analytics: ^8.3.3
+#
+#  firebase_analytics: ^8.3.3
 
   firebase_auth: ^3.1.2
 
   cloud_firestore: ^2.5.3
+
+  flutter_facebook_auth: ^3.5.2
 
 dev_dependencies:
   flutter_test:
