--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,14 +53,16 @@ dependencies:
 
   # Firebase
   firebase_core: ^1.7.0
-#
-#  firebase_analytics: ^8.3.3
-
   firebase_auth: ^3.1.2
-
   cloud_firestore: ^2.5.3
 
+  # Facebook SSO
   flutter_facebook_auth: ^3.5.2
+
+  # Maps integration
+  google_maps_flutter: ^2.0.11
+  google_maps_flutter_web: ^0.3.2
+  geolocator: ^7.7.0
 
 dev_dependencies:
   flutter_test:
