--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
 
   # Firebase
   firebase_core: ^1.7.0
+  firebase_messaging: ^10.0.1
+  flutter_local_notifications: ^6.0.0
 #
 #  firebase_analytics: ^8.3.3
 
