--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,5 +59,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.4.2')
     implementation 'com.google.firebase:firebase-analytics'
 
-    implementation 'com.facebook.android:facebook-login:[8.1)'
+    implementation 'com.facebook.android:facebook-login:12.0.0'
 }
