--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,9 @@ dependencies:
   google_maps_flutter_web: ^0.3.2
   geolocator: ^7.7.0
 
+  # Launcher icon:
+  flutter_launcher_icons: ^0.9.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -80,6 +83,11 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+  image_path: 'assets/images/logo.jpg'
+  android: true
+  ios: true
 
 # The following section is specific to Flutter.
 flutter:
